# nywida

./: Cargo.toml  PKGBUILD  README.md  ascii.art
src/: args.rs  main.rs
src/error/: mod.rs
src/model/: mod.rs
src/service/: config_service.rs  mod.rs  translation_service.rs
src/wrapper/: command.rs  mod.rs  package_manager.rs
