[package]
name = "nywida"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
incremental = false
strip = true 
codegen-units = 1

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_jsonc = "1.0.108"
clap = { version = "4.5.21", features = ["derive"] }